--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "wsp-bot-railway",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.1",
-    "fs": "^0.0.1-security",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.11.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  }
+    "name": "wspkm",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./src/server.js",
+    "type": "module",
+    "scripts": {
+        "start": "node ./src/server.js"
+    },
+    "keywords": [],
+    "dependencies": {
+        "express": "^4.21.1",
+        "mysql2": "^3.11.3"
+    },
+    "author": "",
+    "license": "ISC"
 }
