--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "whatsapp-messaging-api",
     "version": "1.0.0",
     "description": "API for receiving and responding to WhatsApp messages using WhatsApp Business API and MySQL",
-    "main": "server.js",
+    "main": "./src/server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+      "start": "node ./src/server.js",
+      "dev": "nodemon ./src/server.js"
     },
     "dependencies": {
       "dotenv": "^16.4.5",
