--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "API for receiving and responding to WhatsApp messages using WhatsApp Business API and MySQL",
     "main": "./src/server.js",
     "scripts": {
-      "start": "node ./src/server.js",
-      "dev": "nodemon ./src/server.js"
+      "start": "node ./src/server.js"
     },
     "dependencies": {
       "dotenv": "^16.4.5",
